--- a/webapp/view/Calendar.view.xml
+++ b/webapp/view/Calendar.view.xml
@@ -1,4 +1,4 @@
-<mvc:View
+<mvc:View xmlns:calendar="sap.ui.unified.calendar"
 		controllerName="itmo2021calendareny.controller.Calendar"
         xmlns:l="sap.ui.layout"
 		xmlns:u="sap.ui.unified"
