--- a/webapp/view/Calendar.view.xml
+++ b/webapp/view/Calendar.view.xml
@@ -10,5 +10,6 @@
             intervalSelection="true"
             showWeekNumbers="false"
             months="12"
-            width="100%"/>
+            width="100%">
+    </u:Calendar>
 </mvc:View>
