Add rule checking for vacation table. Add some UI tools connected with vacation table rules. Changed item adding to table from by-hand to binding. Add table sorting due to binding.

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -5,3 +5,13 @@
 .sapUiUnifiedLegend {
     text-align: center;
 }
+
+.verticalLayout {
+    width: 100%;
+}
+
+.flexBox {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
