--- a/webapp/view/Calendar.view.xml
+++ b/webapp/view/Calendar.view.xml
@@ -5,7 +5,16 @@
 		xmlns:mvc="sap.ui.core.mvc"
 		xmlns="sap.m"
 		class="viewPadding">
-    <Table id="table">
+    <Table 
+        id="table"
+        items="{
+            path: 'vacation>/list',
+            sorter: {
+                path: 'startDate',
+                comparator: '.sorterComparator'
+            }
+        }"
+    >
         <columns>
             <Column>
                 <Label text="Дата начала"/>
@@ -19,13 +28,61 @@
             <Column>
                 <Label text="Количество рабочих дней"/>
             </Column>
-            <Column/> 
+            <Column width="70px"/>
         </columns>
+        <ColumnListItem>
+            <Text text="{vacation>startDate}"/>
+            <Text text="{vacation>endDate}"/>
+            <Text text="{vacation>fullDays}"/>
+            <Text text="{vacation>workingDays}"/>
+            <Button 
+                icon="sap-icon://delete"
+                press="onDelete"
+            />
+        </ColumnListItem>
     </Table>
-    <Button 
-        icon="sap-icon://add"
-        press=".onAddVacation"
-    />
+    <l:VerticalLayout class="verticalLayout">
+        <CheckBox
+            id="checkBoxSumDays"
+            displayOnly="true"
+            text="Суммарная длительность отпусков не превышает 28 дней (без учета гос. праздников)"
+            selected="true"
+        />
+        <CheckBox
+            id="checkBoxVacationCount"
+            displayOnly="true"
+            text="Суммарная количество отпусков не должно превышать 4"
+            selected = "true"
+        />
+        <CheckBox
+            id="checkBoxLongestVacationDuration"
+            displayOnly="true"
+            text="Один из отпусков должен иметь длительность хотя бы 14 дней (без учета гос. праздников)"
+        />
+
+        <FlexBox class="flexBox" justifyContent="SpaceBetween">
+            <Button
+                id="addVacationButton"
+                icon="sap-icon://add"
+                press="onAddVacation"
+            />
+            <Button
+                id="confirmVacationButton"
+                text="Подтвердить"
+                press="onConfirmVacation"
+            />
+        </FlexBox>
+
+        <FlexBox class="flexBox" justifyContent="End">
+
+            <Button
+                id="fixVacationButton"
+                text="Исправить"
+                press="onFixVacation"
+                visible="false"
+            />
+        </FlexBox>
+    </l:VerticalLayout>
     <u:CalendarLegend id="calendarLegend" columnWidth="200px"/>
 	<u:Calendar
             id="calendar"
